name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  other-modules:
    Naming
    Pretty
    Location
    Type
    Expr
    Prim
    Literal
    Runtime
    WebRuntime
    Util
    WebApp
    Todomvc_main
    Todomvc_client
  hs-source-dirs:
    app
    app/ast
    app/bidi
    app/codegen
    app/util
    app/prog
  ghcjs-options:
    -dedupe
  build-depends:
      base
    , miso
    , aeson
    , containers
    , ghcjs-base
    , containers
    , json
    , transformers
    , bytestring
  default-language:    Haskell2010
