name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  other-modules:
    Naming
    Pretty
    CSType
    CSSubst
    CSExpr
    Location
    Type
    Expr
    Prim
    Literal
    CodeGen
    Runtime
    Util
  hs-source-dirs:
    app
    app/ast
    app/bidi
    app/cs
    app/codegen
    app/util
  ghcjs-options:
    -dedupe
  build-depends:
      base
    , miso
    , aeson
    , containers
    , ghcjs-base
    , containers
    , json
    , transformers
  default-language:    Haskell2010
